fix overlapping of text in CSS

--- a/src/uniparc/components/sub-entry/styles/sub-entry-context.module.scss
+++ b/src/uniparc/components/sub-entry/styles/sub-entry-context.module.scss
@@ -6,7 +6,6 @@
 
 .availability-content {
   margin-bottom: 1.5em;
-  line-height: 0.2rem;
 }
 
 .availability-label-disabled {
